--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,9 @@
 name: client
+
 dependencies:
   browser: any
   logging: ">=0.9.1+1 <0.10.0"
+
+dev_dependencies:
+  unittest: ">=0.11.0 <0.12.0"
+  mock: ">=0.11.0 <0.12.0"
