--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ name: client
 dependencies:
   browser: any
   logging: ">=0.9.1+1 <0.10.0"
+  json_object: any
 
 dev_dependencies:
   unittest: ">=0.11.0 <0.12.0"
