--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,9 @@ dependencies:
   json_object: any
   cookie: ">=0.0.4 <0.1.0"
   messages:
-    path: ../messages/
-
+    git:
+      url: https://github.com/cinan/socket-messages.git
+      ref: master
 dev_dependencies:
   unittest: ">=0.11.0 <0.12.0"
   mock: ">=0.11.0 <0.12.0"
